# SGDD

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  SGDD.md  check_vocab.py  main.py  plan.md  pyproject.toml  results.json
configs/: phase1_mixed_validation.yaml  phase1_vib.yaml  phase1_whitening.yaml  phase1_wiki.yaml  phase1_wiki_test.yaml  phase2_qqp.yaml
issues/: 1-printlog.md  2-architecture.md  3-Dimensional_Transformation.md  4-Dataset.md  5-repetition-solution.md  6-Architecture_problem.md  7-ppl.md  8-Smoke-Testing.md
src/: __init__.py  evaluate.py  train.py
src/models/: __init__.py  decoder.py  diffusion.py  encoder.py  sgdd.py
src/scripts/: compute_whitening_stats.py
src/utils/: __init__.py  checkpoints.py  config.py  data.py  metrics.py  sampling.py
temp/: analyze_latent.py  check_data_quality.py  check_isotropy.py  inference.py  test_encoder_optional_adapter.py  test_eos_support.py  test_inference_fix.py  test_vib_implementation.py  troubleshoot_collapse.py
tests/: __init__.py  smoke_test.py  test_diffusion.py  test_encoder.py  test_encoder_visualization.py  test_whitening_integration.py  test_whitening_optimization.py  visualize_encoder_batch.py  visualize_roberta_pooling.py
tests/smoke_data/validation/: data-00000-of-00001.arrow  state.json
